# bbcpp

./: CMakeLists.txt
examples/: CMakeLists.txt  cxxopts.hpp  example_c.c  simple_c_example.c
lib/: BBDocument.h  CMakeLists.txt  bbcpp_c.cpp  bbcpp_c.h  bbcpp_simple.c  bbcpp_simple.h
